--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router": "^6.20.0",
-    "react-router-dom": "^6.20.0"
+    "react-router-dom": "^6.20.0",
+    "vite-plugin-require": "^1.1.13"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
